--- a/wrangler.toml
+++ b/wrangler.toml
@@ -108,5 +108,8 @@ binding = "AI"
 # index_name = "my-index"
 
 # wrangler.toml (wrangler v3.88.0^)
+[observability]
+enabled = true
+
 [observability.logs]
 enabled = true
