feat(ci): add GitHub Actions workflows for testing and Cloudflare deployment

--- a/wrangler.test.toml
+++ b/wrangler.test.toml
@@ -1,4 +1,4 @@
-name = "kayar-bot-test"
+name = "fitness-bot-test"
 main = "src/index.ts"
 compatibility_date = "2024-07-25"
 compatibility_flags = ["nodejs_compat"]
