--- a/wrangler.toml
+++ b/wrangler.toml
@@ -27,7 +27,7 @@ binding = "AI"
 # Bind an Analytics Engine dataset. Use Analytics Engine to write analytics within your Pages Function.
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#analytics-engine-datasets
 [[analytics_engine_datasets]]
-binding = "ANALYTICS"
+binding = "ANALYTICS_ENGINE"
 database_name = "fitness-bot-metrics"
 
 # Bind a headless browser instance running on Cloudflare's global network.
