--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,8 @@ jobs:
     permissions:
       contents: read
       id-token: write
+    environment:
+      name: prod
 
     steps:
       - name: Checkout repository
