--- a/wrangler.toml
+++ b/wrangler.toml
@@ -29,7 +29,7 @@ binding = "AI"
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#analytics-engine-datasets
 [[analytics_engine_datasets]]
 binding = "ANALYTICS_ENGINE"
-database_name = "fitness-bot-metrics"
+dataset = "fitness-bot-metrics"
 
 # Bind a headless browser instance running on Cloudflare's global network.
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#browser-rendering
